--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   left:
   - text: "Home"
    href: index.html
-  - text: "Speed and Distance"
+  - text: "EllandRowd"
    href: speed-and-distance.html
 output:
   html_document:
