--- a/_site.yml
+++ b/_site.yml
@@ -3,10 +3,10 @@ output_dir: "docs"
 navbar:
   title: "EllandRowd"
   left:
-  - text: "Home"
-   href: index.html
-  - text: "EllandRowd"
-   href: speed-and-distance.html
+   - text: "Home"
+     href: index.html
+   - text: "Speed and Distance2"
+     href: speed-and-distance.html
 output:
-  html_document:
- theme: cosmo
+html_document:
+theme: cosmo
