Adding first plot of Top league stadium locations from https://raw.githubusercontent.com/FBDB-listsXYZ/FootballData/main/stadiums-with-GPS-coordinates%2Bregions.csv

--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
    href: index.html
   - text: "EllandRowd"
    href: speed-and-distance.html
+  - text: "Stadium Plot"
+   href: dlfootballgps.html
 output:
   html_document:
  theme: cosmo
